# predici_clone

./: .gitignore  CHANGELOG.md  README.md  plan.md  plan2.md  plan3.md  plan4.md  plan5.md  plan6.md  pyproject.toml
docs/: plan3_completion_audit.md  plan3_progress.md  plan4_progress.md  plan5_progress.md  v1_benchmark_report.md  v1_ci_report.md  v2_benchmark_report.md  v2_ci_report.md
examples/: automation_full_workflow.py  industrial_semibatch_cstr.py  tutorial_oregonator.py  tutorial_polyethylene_basic.py
manual/: api.rst  architecture.rst  conf.py  extending.rst  fitting.rst  gui.rst  index.rst  make.bat  manual_suite.rst  outputs.rst  quickstart.rst  tutorials.rst
packaging/: README.md  pyinstaller_predici_clone.spec
predici_clone/: __init__.py
reference/: README.md  check_engine.py  frp_theory.py  parameters.py  validate_cross_monomer.py  validate_dead_polymer.py  validate_literature.py
scripts/: packaging_smoke_test.ps1  packaging_smoke_test_v2.ps1
test_manual_result/: README.md  input.json  report.html  report.md  result.csv  result.json  result.md  results.csv  results.json
test_manuals/: README.md  __init__.py  __main__.py  cli.py  registry.py  report.py  runner.py
tests/: paper_benchmarks.py  test_adaptive_galerkin.py  test_advanced_chemistry.py  test_automation_api.py  test_cape_particle_templates.py  test_chart_reference_io.py  test_component_admin.py  test_copolymer_2d.py  test_core_galerkin.py  test_emulsion_phases_thermo.py  test_engine_project.py  test_experiment_data.py  test_galerkin_backend.py  test_galerkin_operator.py  (+33 more)
(+694 files in other folders)
