[project]
name = "predici-clone"
version = "2.0.0"
description = "PREDICI-style polymerization, population-balance, Monte Carlo, and thermodynamics simulator."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "PySide6",
  "openpyxl",
  "networkx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
predici-clone = "predici_clone.app.main:main"
predici-manuals = "test_manuals.cli:main"
